[gd_scene load_steps=10 format=3 uid="uid://bfgjb4e770rse"]

[ext_resource type="Script" path="res://build.gd" id="1_dgc0j"]
[ext_resource type="PackedScene" uid="uid://csfs01nv8po51" path="res://assets/background_2.tscn" id="2_tjmcd"]
[ext_resource type="FontFile" uid="uid://2g7nibblpvpr" path="res://font/joystix monospace.otf" id="3_c10bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gamb4"]
bg_color = Color(1, 0.337255, 0.321569, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y2vxf"]
bg_color = Color(0.964706, 0.964706, 0.964706, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1gtvx"]
bg_color = Color(0.435294, 0.658824, 0.537255, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sposr"]
bg_color = Color(0.733333, 0.552941, 0.490196, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yb8te"]
bg_color = Color(0.639216, 0.294118, 0.505882, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yacmq"]
bg_color = Color(0.101961, 0.666667, 0.788235, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="build" type="Node"]
script = ExtResource("1_dgc0j")

[node name="background2" parent="." instance=ExtResource("2_tjmcd")]

[node name="Container" type="Container" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Pop" type="Button" parent="."]
offset_right = 18.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("3_c10bh")
theme_override_styles/normal = SubResource("StyleBoxFlat_gamb4")
text = "X"

[node name="explications" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -13.5
offset_right = 189.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c10bh")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_y2vxf")
text = "les explications"
horizontal_alignment = 1

[node name="save" type="Button" parent="."]
offset_left = 983.0
offset_top = 21.0
offset_right = 1036.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("3_c10bh")
theme_override_styles/normal = SubResource("StyleBoxFlat_1gtvx")
text = "save"

[node name="save2" type="Button" parent="."]
offset_left = 887.0
offset_top = 90.0
offset_right = 1113.0
offset_bottom = 136.0
theme_override_fonts/font = ExtResource("3_c10bh")
theme_override_styles/normal = SubResource("StyleBoxFlat_1gtvx")
text = "to bacteria 2"

[node name="exit" type="Button" parent="."]
offset_left = 1060.0
offset_top = 21.0
offset_right = 1112.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("3_c10bh")
theme_override_styles/normal = SubResource("StyleBoxFlat_sposr")
text = "exit
"

[node name="gene" type="Button" parent="."]
offset_left = 79.0
offset_top = -123.0
offset_right = 171.0
offset_bottom = -66.0
theme_override_styles/normal = SubResource("StyleBoxFlat_yb8te")

[node name="molecule" type="Button" parent="."]
offset_left = 223.0
offset_top = -123.0
offset_right = 315.0
offset_bottom = -66.0
theme_override_styles/normal = SubResource("StyleBoxFlat_yacmq")

[node name="tuto" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="tuto"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -24.0
offset_right = 20.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_c10bh")
theme_override_font_sizes/font_size = 40
text = "This is where you will be able
to create your plasmids
you don't have any genes at
the moment so we will come back
later.

for now, go back to the main game
 and check the ?
 next to your bacteria"
horizontal_alignment = 1

[connection signal="button_down" from="Pop" to="." method="_on_pop_button_down"]
[connection signal="button_down" from="save" to="." method="_on_save_button_down"]
[connection signal="button_down" from="save2" to="." method="_on_save_2_button_down"]
[connection signal="button_down" from="exit" to="." method="_on_exit_button_down"]
